--- a/lab4.ipynb
+++ b/lab4.ipynb
@@ -140,7 +140,7 @@
     "#numpy.linalg.eig max eigen value\n",
     "print('\\nMax eigen value(numpy.linalg.eig):', '{:.3f}\\n'.format(v_np))\n",
     "#numpy.linalg.eig corresponding eigen vector\n",
-    "print_matrix(w_np, label='Corresponding eigen vector(power method)')"
+    "print_matrix(w_np, label='Corresponding eigen vector(numpy.linalg.eig)')"
    ]
   }
  ],
